--- a/index.html
+++ b/index.html
@@ -3,82 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rutas de Peseras en Matamoros</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <title>Rutas de Peceras en Matamoros</title>
+
+    <!-- Leaflet -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.css" />
+    <script src="https://api.mapbox.com/mapbox.js/plugins/leaflet-fullscreen/v1.0.1/leaflet.fullscreen.min.js"></script>
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #ffffffaa;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            height: 100vh; /* Ajustar al tamaño de la pantalla */
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 1em 0;
-            text-align: center;
-            width: 100%; /* Ajustado al ancho de la página */
-            margin: 0;
-            border-radius: 0; /* Quitar bordes redondeados */
-        }
-        .content {
-            display: flex;
-            width: 100%;
-            flex: 1; /* Tomar el espacio restante */
-            padding: 2em;
-        }
-        .container {
-            width: 40%;
-            padding-right: 1em;
-        }
-        .route {
-            background-color: #fff;
-            padding: 1em;
-            margin-bottom: 1em;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            position: relative;
-        }
-        .route h2 {
-            margin-top: 0;
-        }
-        .route p {
-            margin: 0.5em 0;
-        }
-        .route button {
-            position: absolute;
-            right: 10px;
-            top: 10px;
-            padding: 0.5em 1em;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-        .route button:hover {
-            background-color: #0056b3;
-        }
-        .map-container {
-            width: 60%;
-            padding-left: 1em;
-            height: 100%; /* Ajustar al tamaño de la pantalla */
-        }
-        #map {
-            width: 100%;
-            height: 100%; /* Ajustar al tamaño de la pantalla */
-            border: none;
-        }
+        body { margin: 0; font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; height: 100vh; }
+        header { background-color: #333; color: #fff; padding: 1em 0; text-align: center; width: 100%; margin: 0; border-radius: 0; }
+        .content { display: flex; width: 100%; flex: 1; padding: 2em; }
+        .container { width: 40%; padding-right: 1em; }
+        .route { background-color: #fff; padding: 1em; margin-bottom: 1em; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); position: relative; }
+        .route h2 { margin-top: 0; }
+        .route p { margin: 0.5em 0; }
+        .route button { position: absolute; right: 10px; top: 10px; padding: 0.5em 1em; background-color: #007bff; color: #fff; border: none; border-radius: 3px; cursor: pointer; }
+        .route button:hover { background-color: #0056b3; }
+        .map-container { width: 60%; padding-left: 1em; height: 100%; }
+        #map { width: 100%; height: 100%; border: none; }
     </style>
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
     <header>
-        <h1>Rutas de Peseras en Matamoros</h1>
+        <h1>Rutas de Peceras en Matamoros</h1>
         <p>Viaja rápido y cómodo en tu ciudad.</p>
     </header>
     <div class="content">
@@ -117,16 +66,48 @@
         </div>
     </div>
     <script>
-        var map = L.map('map').setView([25.8693, -97.5027], 13);
+        var map = L.map('map').setView([25.8797, -97.5046], 13);
 
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+            attribution: '© OpenStreetMap contributors'
         }).addTo(map);
 
-        L.marker([25.8693, -97.5027]).addTo(map)
-            .bindPopup('Matamoros')
-            .openPopup();
+        var rutas = [
+            {
+                "name": "Ruta 1: Centro - Mercado",
+                "color": "blue",
+                "coordinates": [
+                    [25.8797, -97.5046],
+                    [25.8897, -97.5046],
+                    [25.8897, -97.5146]
+                ]
+            },
+            {
+                "name": "Ruta 2: Terminal de Autobuses - Universidad",
+                "color": "green",
+                "coordinates": [
+                    [25.8697, -97.5046],
+                    [25.8797, -97.5146],
+                    [25.8897, -97.5246]
+                ]
+            }
+        ];
+
+        rutas.forEach(function (ruta) {
+            var polyline = L.polyline(ruta.coordinates, { color: ruta.color, weight: 5 }).addTo(map);
+            polyline.bindPopup(ruta.name);
+            polyline.on('mouseover', function () { this.openPopup(); });
+        });
+
+        L.control.fullscreen({
+            position: 'topright',
+            title: 'Pantalla completa',
+            titleCancel: 'Salir de pantalla completa',
+            content: null,
+            forceSeparateButton: true,
+            forcePseudoFullscreen: true,
+            fullscreenElement: false
+        }).addTo(map);
     </script>
 </body>
 </html>
-
