--- a/index.html
+++ b/index.html
@@ -14,15 +14,7 @@
     <style>
         body { margin: 0; font-family: Arial, sans-serif; display: flex; flex-direction: column; align-items: center; height: 100vh; }
         header { background-color: #333; color: #fff; padding: 1em 0; text-align: center; width: 100%; margin: 0; border-radius: 0; }
-        .content { display: flex; width: 100%; flex: 1; padding: 2em; }
-        .container { width: 40%; padding-right: 1em; }
-        .route { background-color: #fff; padding: 1em; margin-bottom: 1em; border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); position: relative; }
-        .route h2 { margin-top: 0; }
-        .route p { margin: 0.5em 0; }
-        .route button { position: absolute; right: 10px; top: 10px; padding: 0.5em 1em; background-color: #007bff; color: #fff; border: none; border-radius: 3px; cursor: pointer; }
-        .route button:hover { background-color: #0056b3; }
-        .map-container { width: 60%; padding-left: 1em; height: 100%; }
-        #map { width: 100%; height: 100%; border: none; }
+        #map { width: 100%; flex: 1; border: none; }
     </style>
 </head>
 <body>
@@ -30,41 +22,8 @@
         <h1>Rutas de Peceras en Matamoros</h1>
         <p>Viaja rápido y cómodo en tu ciudad.</p>
     </header>
-    <div class="content">
-        <div class="container">
-            <div class="route">
-                <button>Ver más</button>
-                <h2>Ruta 1: Centro - Mercado</h2>
-                <p><strong>Operador_1:</strong> Peseras ABC</p>
-                <p><strong>Hora de inicio:</strong> 06:00 AM</p>
-                <p><strong>Hora de salida:</strong> Cada 15 minutos</p>
-            </div>
-            <div class="route">
-                <button>Ver más</button>
-                <h2>Ruta 2: Terminal de Autobuses - Universidad</h2>
-                <p><strong>Operador_2:</strong> Peseras DEF</p>
-                <p><strong>Hora de inicio:</strong> 06:30 AM</p>
-                <p><strong>Hora de salida:</strong> Cada 20 minutos</p>
-            </div>
-            <div class="route">
-                <button>Ver más</button>
-                <h2>Ruta 3: Hospital - Parque Central</h2>
-                <p><strong>Operador_3:</strong> Peseras GHI</p>
-                <p><strong>Hora de inicio:</strong> 07:00 AM</p>
-                <p><strong>Hora de salida:</strong> Cada 10 minutos</p>
-            </div>
-            <div class="route">
-                <button>Ver más</button>
-                <h2>Ruta 4: Aeropuerto - Plaza Comercial</h2>
-                <p><strong>Operador_4:</strong> Peseras JKL</p>
-                <p><strong>Hora de inicio:</strong> 05:30 AM</p>
-                <p><strong>Hora de salida:</strong> Cada 30 minutos</p>
-            </div>
-        </div>
-        <div class="map-container">
-            <div id="map"></div>
-        </div>
-    </div>
+    <div id="map"></div>
+
     <script>
         var map = L.map('map').setView([25.8797, -97.5046], 13);
 
